--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@tanstack/react-query": "^5.80.7",
     "@tanstack/react-query-devtools": "^5.80.7",
+    "@types/cookie": "^0.6.0",
     "axios": "^1.10.0",
+    "cookie": "^1.0.2",
     "formik": "^2.4.6",
     "fortawesome": "^0.0.1-security",
     "i": "^0.3.7",
